--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "react-query-gql",
-  "version": "0.0.8",
-  "description": "React Query Gql Client",
+  "name": "next-utils",
+  "version": "0.0.9",
+  "description": "Next utils",
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "build": "rollup -c",
+    "build": "webpack",
     "start": "rollup -c -w",
     "release": "standard-version"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/correttojs/graphql-codegen-apollo-next-ssr"
+    "url": "https://github.com/correttojs/next-utils"
   },
   "peerDependencies": {
     "@graphql-typed-document-node/core": "^3.1.0",
-    "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0 || ^15.0.0",
+    "graphql": "^14.0.0 || ^15.0.0",
     "react": "^17.0.2",
-    "react-query": "^3.15.2"
+    "react-query": "^3.15.2",
+    "next": "^10.1"
   },
   "main": "dist/index.js",
   "devDependencies": {
@@ -33,14 +34,17 @@
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "jest": "26.6.3",
+    "next": "^10.2.0",
+    "peer-deps-externals-webpack-plugin": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.15.2",
-    "rollup": "^2.46.0",
-    "rollup-plugin-typescript2": "^0.30.0",
     "standard-version": "9.2.0",
     "ts-jest": "26.5.4",
-    "typescript": "4.2.4"
+    "ts-loader": "^9.1.2",
+    "typescript": "4.2.4",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.7.0"
   },
   "author": "Fabio Benedetti",
   "keywords": [
@@ -51,5 +55,8 @@
   ],
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "@rollup/plugin-multi-entry": "^4.0.0"
+  }
 }
