--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,11 @@
     "lib": [
       "es2015"
     ],
+    "allowSyntheticDefaultImports": true,
     "module": "esnext",
     "moduleResolution": "node",
     "jsx": "preserve",
-    "outDir": "build",
+    "outDir": "dist",
     "esModuleInterop": false,
     "declaration": true,
   },
