--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules
-build
 .vscode
-example/src/generated
-example/node_modules/*
-test/generated.ts
+!/dist
+/dist/*
+!/dist/eslint-config
+ 
