--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-query": "^3.15.2",
     "next": "^10.1"
   },
-  "main": "dist/index.js",
+  "main": "./index.js",
   "devDependencies": {
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-react": "^7.13.13",
