--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/correttojs/next-utils"
+    "url": "git+https://github.com/correttojs/next-utils.git"
   },
   "peerDependencies": {
     "@graphql-typed-document-node/core": "^3.1.0",
@@ -53,5 +53,9 @@
     "react-query",
     "nextjs",
     "grapgql-codegen"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/correttojs/next-utils/issues"
+  },
+  "homepage": "https://github.com/correttojs/next-utils#readme"
 }
