--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@corretto/next-utils",
+  "name": "@correttojs/next-utils",
   "version": "0.0.20",
   "description": "Next utils",
   "license": "MIT",
@@ -57,5 +57,6 @@
   "bugs": {
     "url": "https://github.com/correttojs/next-utils/issues"
   },
-  "homepage": "https://github.com/correttojs/next-utils#readme"
+  "homepage": "https://github.com/correttojs/next-utils#readme",
+  "dependencies": {}
 }
