--- a/package.json
+++ b/package.json
@@ -1,62 +1,26 @@
 {
-  "name": "@correttojs/next-utils",
-  "version": "0.0.20",
-  "description": "Next utils",
+  "name": "@correttojs/eslint-config",
+  "version": "0.0.21",
+  "description": "eslint config",
   "license": "MIT",
   "scripts": {
-    "test": "jest",
-    "build": "webpack",
-    "start": "rollup -c -w",
-    "release": "standard-version",
-    "pub": "git push --follow-tags origin main && cp package.json dist && npm publish dist"
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/correttojs/next-utils.git"
   },
-  "peerDependencies": {
-    "@graphql-typed-document-node/core": "^3.1.0",
-    "graphql": "^14.0.0 || ^15.0.0",
-    "react": "^17.0.2",
-    "react-query": "^3.15.2",
-    "next": "^10.1"
-  },
   "main": "./index.js",
-  "devDependencies": {
-    "@babel/preset-env": "^7.14.0",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "@graphql-typed-document-node/core": "^3.1.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/react-hooks": "^5.1.2",
-    "@types/jest": "^26.0.23",
-    "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
-    "graphql": "^15.5.0",
-    "graphql-request": "^3.4.0",
-    "jest": "26.6.3",
-    "next": "^10.2.0",
-    "peer-deps-externals-webpack-plugin": "^1.0.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-query": "^3.15.2",
-    "standard-version": "9.2.0",
-    "ts-jest": "26.5.4",
-    "ts-loader": "^9.1.2",
-    "typescript": "4.2.4",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.7.0"
-  },
   "author": "Fabio Benedetti",
   "keywords": [
-    "graphql",
-    "react-query",
-    "nextjs",
-    "grapgql-codegen"
+    "eslint"
   ],
   "bugs": {
     "url": "https://github.com/correttojs/next-utils/issues"
   },
   "homepage": "https://github.com/correttojs/next-utils#readme",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "standard-version": "^9.3.0"
+  }
 }
