--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@correttojs/eslint-config",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "description": "eslint config",
   "license": "MIT",
   "scripts": {
@@ -19,7 +19,16 @@
     "url": "https://github.com/correttojs/next-utils/issues"
   },
   "homepage": "https://github.com/correttojs/next-utils#readme",
-  "dependencies": {},
+  "dependencies": {
+    "eslint": "7.26.0",
+    "eslint-config-next": "^0.2.4",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-jest": "24.3.6",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-react": "7.23.2",
+    "eslint-plugin-react-hooks": "4.2.0"
+  },
   "devDependencies": {
     "standard-version": "^9.3.0"
   }
