--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@correttojs/eslint-config",
-  "version": "0.0.22",
+  "version": "0.0.23",
   "description": "eslint config",
   "license": "MIT",
   "scripts": {
@@ -27,7 +27,10 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.23.2",
-    "eslint-plugin-react-hooks": "4.2.0"
+    "eslint-plugin-react-hooks": "4.2.0",
+    "@next/eslint-plugin-next": "^10.2.0",
+    "@typescript-eslint/eslint-plugin": "4.22.1",
+    "@typescript-eslint/parser": "4.22.1"
   },
   "devDependencies": {
     "standard-version": "^9.3.0"
