--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "homepage": "https://github.com/correttojs/eslint-config#readme",
   "dependencies": {
+    "@next/eslint-plugin-next": "^10.2.0",
+    "@typescript-eslint/eslint-plugin": "4.22.1",
+    "@typescript-eslint/parser": "4.22.1",
     "eslint": "7.26.0",
     "eslint-config-next": "^0.2.4",
     "eslint-config-prettier": "8.3.0",
@@ -28,9 +31,12 @@
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-react-hooks": "4.2.0",
-    "@next/eslint-plugin-next": "^10.2.0",
-    "@typescript-eslint/eslint-plugin": "4.22.1",
-    "@typescript-eslint/parser": "4.22.1"
+    "husky": "4.3.8",
+    "import-sort-parser-typescript": "6.0.0",
+    "import-sort-style-module": "6.0.0",
+    "lint-staged": "11.0.0",
+    "prettier": "2.2.1",
+    "prettier-plugin-import-sort": "0.0.6"
   },
   "devDependencies": {
     "standard-version": "9.3.0"
