--- a/package.json
+++ b/package.json
@@ -20,12 +20,28 @@
   },
   "homepage": "https://github.com/correttojs/eslint-config#readme",
   "dependencies": {
+    "@graphql-codegen/cli": "1.21.4",
+    "@graphql-codegen/introspection": "1.18.2",
+    "@graphql-codegen/near-operation-file-preset": "1.18.0",
+    "@graphql-codegen/typed-document-node": "1.18.5",
+    "@graphql-codegen/typescript": "1.22.0",
+    "@graphql-codegen/typescript-graphql-request": "3.1.1",
+    "@graphql-codegen/typescript-operations": "1.17.16",
+    "@graphql-codegen/typescript-react-apollo": "2.2.4",
+    "@graphql-codegen/typescript-resolvers": "1.19.1",
+    "@graphql-typed-document-node/core": "3.1.0",
     "@next/eslint-plugin-next": "^10.2.0",
+    "@storybook/addon-actions": "6.2.9",
+    "@storybook/addon-essentials": "6.2.9",
+    "@storybook/addon-links": "6.2.9",
+    "@storybook/react": "6.2.9",
     "@testing-library/react": "11.2.6",
     "@testing-library/react-hooks": "5.1.2",
     "@testing-library/user-event": "13.1.8",
     "@typescript-eslint/eslint-plugin": "4.22.1",
     "@typescript-eslint/parser": "4.22.1",
+    "autoprefixer": "10.2.5",
+    "babel-jest": "26.6.3",
     "eslint": "7.26.0",
     "eslint-config-next": "^0.2.4",
     "eslint-config-prettier": "8.3.0",
@@ -41,6 +57,7 @@
     "jest-fetch-mock": "3.0.3",
     "jest-transform-graphql": "2.1.0",
     "lint-staged": "11.0.0",
+    "postcss": "8.2.14",
     "prettier": "2.2.1",
     "prettier-plugin-import-sort": "0.0.6"
   },
