--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-react-hooks": "4.2.0",
+    "graphql-codegen-apollo-cache": "^0.1.9",
+    "graphql-codegen-apollo-next-ssr": "^1.6.0",
     "husky": "4.3.8",
     "import-sort-parser-typescript": "6.0.0",
     "import-sort-style-module": "6.0.0",
