--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "lint-staged": "11.0.0",
     "postcss": "8.2.14",
     "prettier": "2.2.1",
-    "prettier-plugin-import-sort": "0.0.6"
+    "prettier-plugin-import-sort": "0.0.6",
+    "tsconfig-paths-webpack-plugin": "3.5.1"
   },
   "devDependencies": {
     "standard-version": "9.3.0"
